--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
+    "rebound": "0.0.13",
     "sequelize": "^3.23.4",
     "shortid": "^2.2.6",
     "webpack": "^1.13.1",
