--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mysql": "^2.11.1",
     "pg": "^6.0.3",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.30.0",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
+    "react-skylight": "^0.4.0",
     "sequelize": "^3.23.4",
     "shortid": "^2.2.6",
     "webpack": "^1.13.1",
